[gd_scene load_steps=14 format=2]

[ext_resource path="res://game/shots/shot.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/Bullet/IMG_0046.PNG" type="Texture" id=2]
[ext_resource path="res://assets/sprites/Bullet/IMG_0044.PNG" type="Texture" id=3]
[ext_resource path="res://assets/sprites/Bullet/IMG_0043.PNG" type="Texture" id=4]
[ext_resource path="res://assets/sprites/Bullet/IMG_0045.PNG" type="Texture" id=5]
[ext_resource path="res://assets/sprites/Bullet/IMG_0053.PNG" type="Texture" id=6]
[ext_resource path="res://assets/sprites/Bullet/IMG_0051.PNG" type="Texture" id=7]
[ext_resource path="res://assets/sprites/Bullet/IMG_0049.PNG" type="Texture" id=8]
[ext_resource path="res://assets/sprites/Bullet/IMG_0052.PNG" type="Texture" id=9]
[ext_resource path="res://assets/sprites/Bullet/IMG_0048.PNG" type="Texture" id=10]
[ext_resource path="res://assets/sprites/Bullet/IMG_0050.PNG" type="Texture" id=11]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.22332
height = 3.67369

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 6 ) ],
"loop": true,
"name": "explode",
"speed": 15.0
} ]

[node name="shot" type="Area2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.195378, 1.85468 )
scale = Vector2( 0.685472, 0.958615 )
frames = SubResource( 2 )
animation = "explode"
playing = true

[connection signal="body_entered" from="." to="." method="_on_shot_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
